framework/tests/framework/UnimportedExtends1.java
// :: error: cannot find symbol
public class UnimportedExtends1 extends UnimportedClass {}
